--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -6,7 +6,7 @@
   </mat-form-field>
   <mat-form-field appearance="fill">
     <mat-label>Password</mat-label>
-    <input matInput [(ngModel)]="user.password">
+    <input type="password" matInput [(ngModel)]="user.password">
   </mat-form-field>
   <button mat-button (click)="aquireToken()"> Login </button>
   <button mat-button (click)="register()"> Register </button>
